Added popular cities

--- a/index.html
+++ b/index.html
@@ -75,10 +75,18 @@
           </form>
           <div class="nested-box3">
             <div>Popular:</div>
-            <div><a href="#">London</a></div>
-            <div><a href="#">New York</a></div>
-            <div><a href="#">Milan</a></div>
-            <div><a href="#">Madrid</a></div>
+            <div>
+              <a href="#" id="london">London</a>
+            </div>
+            <div>
+              <a href="#" id="paris">Paris</a>
+            </div>
+            <div>
+              <a href="#" id="milan">Milan</a>
+            </div>
+            <div>
+              <a href="#" id="madrid">Madrid</a>
+            </div>
           </div>
         </div>
       </div>
