Added a link to my GitHub

--- a/index.html
+++ b/index.html
@@ -156,7 +156,10 @@
         </div>
       </div>
     </div>
-    <p class="footer"><a href="">Open-source code</a> by Kseniia Hrytsenko</p>
+    <p class="footer">
+      <a href="https://github.com/kseniiagv/weather-app">Open-source code</a> by
+      Kseniia Hrytsenko
+    </p>
     <script src="src/script.js"></script>
   </body>
 </html>
