--- a/index.html
+++ b/index.html
@@ -157,8 +157,10 @@
       </div>
     </div>
     <p class="footer">
-      <a href="https://github.com/kseniiagv/weather-app">Open-source code</a> by
-      Kseniia Hrytsenko
+      <a href="https://github.com/kseniiagv/weather-app" target="_blank"
+        >Open-source code</a
+      >
+      by Kseniia Hrytsenko
     </p>
     <script src="src/script.js"></script>
   </body>
