--- a/index.html
+++ b/index.html
@@ -110,20 +110,20 @@
         <div class="content">
           <a href="#" class="prev"></a>
           <div class="hourly-forecast">
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
+            <div">11:00<br />☀️<br />21°C</div>
+            <div">11:00<br />☀️<br />21°C</div>
+            <div">11:00<br />☀️<br />21°C</div>
+            <div">11:00<br />☀️<br />21°C</div>
+            <div">11:00<br />☀️<br />21°C</div>
+            <div">11:00<br />☀️<br />21°C</div>
+            <div">11:00<br />☀️<br />21°C</div>
+            <div">11:00<br />☀️<br />21°C</div>
+            <div">11:00<br />☀️<br />21°C</div>
+            <div">11:00<br />☀️<br />21°C</div>
+            <div">11:00<br />☀️<br />21°C</div>
+            <div">11:00<br />☀️<br />21°C</div>
+            <div">11:00<br />☀️<br />21°C</div>
+            <div">11:00<br />☀️<br />21°C</div>
           </div>
           <a href="#" class="next"></a>
         </div>
@@ -135,24 +135,7 @@
           </div>
         </div>
         <div class="content">
-          <a href="#" class="prev"></a>
-          <div class="daily-forecast">
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-            <div>11:00<br />☀️<br />21°C</div>
-          </div>
-          <a href="#" class="next"></a>
+          <div class="daily-forecast"></div>
         </div>
       </div>
     </div>
