Added content to tabs
Added corresponding content to tabs "Precipitation" and "Wind"; added suitable icons.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
         </div>
         <div class="content">
           <a href="#" class="prev"></a>
-          <div class="hourly-forecast"></div>
+          <div id="hourly-temp"></div>
+          <div id="hourly-prec"></div>
+          <div id="hourly-wind"></div>
           <a href="#" class="next"></a>
         </div>
       </div>
